use jade display views

--- a/app/index.jade
+++ b/app/index.jade
@@ -2,11 +2,12 @@ doctype html
 html
   head
     meta(name="description" content="")
+    base(href="/")
     meta(name="viewport" content="width=device-width")
-    script(src = "/jspm_packages/system.js")
+    script(src="jspm_packages/system.js")
     script(src="config.js")
     script.
-      System.import("scripts/app.js")
+      System.import("../app/scripts/app")
   body(ng-app="Muggles")
     p.
       hello muggles
