--- a/app/styles/index.less
+++ b/app/styles/index.less
@@ -1,8 +1,11 @@
-.ui.grid {
-  margin: 20px;
+body {
+  background-image: url("../../app/images/bg.jpg");
+}
+.ui.grid#logo-grid {
+  background-color: #fff;
 }
 
-img#myLogo {
+img#my-logo {
   height: 100%;
   width: 10%;
   margin-left: 20px;
