--- a/app/styles/register.less
+++ b/app/styles/register.less
@@ -1,3 +1,18 @@
-.ui.grid {
+.ui.grid#register-grid {
   margin: 20px;
+}
+
+#welcome-column{
+  margin-left: 100px;
+  margin-top: 100px;
+}
+
+#Welcome-message {
+  padding-left: 300px;
+  font-size: 50px;
+  font-family: cursive;
+}
+
+#button-field {
+  padding-left: 100px;
 }
