add invitation and verification code

--- a/app/views/register.jade
+++ b/app/views/register.jade
@@ -29,6 +29,12 @@
       .field
         label 手机号
         input#phone-number(placeholder="手机号" type="text")
+      .field
+        label 邀请码
+        input#invitation-code(placeholder="邀请码" type="text")
+      .filed
+        label 验证码
+        input#verification-code(placeholder="验证码" type="text")
       .field#button-field
         .ui.positive.reset.button#reset-button 注册
         .ui.negative.submit.button#submit-button 返回登录
