--- a/app/views/register.jade
+++ b/app/views/register.jade
@@ -32,7 +32,7 @@
       .field
         label 邀请码
         input#invitation-code(placeholder="邀请码" type="text")
-      .filed
+      .field
         label 验证码
         input#verification-code(placeholder="验证码" type="text")
       .field#button-field
