--- a/app/styles/register.less
+++ b/app/styles/register.less
@@ -13,6 +13,15 @@
   font-family: cursive;
 }
 
+#field-name {
+  padding-right: 26px;
+}
+
+#three-field-name {
+  padding-right: 13px;
+}
+
 #button-field {
   padding-left: 100px;
 }
+
