--- a/app/views/register.jade
+++ b/app/views/register.jade
@@ -5,36 +5,67 @@
     .ui.form.segment
       .ui.header#register-header 欢迎注册Muggles
       .field
-        label 姓名
-        input#user-name(placeholder="姓名" type="text" ng-model="vm.user.name" value="{{vm.user.name}}" ng-change="vm.change_user_name(vm.user.name)")
-      .field
-        label 邮箱
-        input#email(placeholder="邮箱" type="text" ng-model="vm.user.email" value="{{vm.user.email}}" ng-change="vm.change_user_email(vm.user.email)")
+        .grouped.inline.fields
+          .field
+            label#field-name 姓名
+          .field
+            input#user-name(placeholder="姓名" type="text" ng-model="vm.user.name" value="{{vm.user.name}}" ng-change="vm.change_user_name(vm.user.name)")
+        .tips
       .field
         .grouped.inline.fields
           .field
-            label 性别
+            label#field-name 邮箱
+          .field
+            input#email(placeholder="邮箱" type="text" ng-model="vm.user.email" value="{{vm.user.email}}" ng-change="vm.change_user_email(vm.user.email)")
+        .tips
+          span.tip(ng-show="vm.email_required_signal") {{vm.email_required_tip}}
+          span.tip(ng-show="vm.email_error_signal") {{vm.email_error_tip}}
+      .field
+        .grouped.inline.fields
+          .field
+            label#field-name 性别
           .field
               input(type="radio" name="fruit" value="男")
               label 男
           .field
               input(type="radio" name="fruit" value="女")
               label 女
+        .tips
       .field
-        label 密码
-        input#password(placeholder="密码" type="password" ng-model="vm.user.password" value="{{vm.user.password}}" ng-change="vm.change_user_password(vm.user.password)")
+        .grouped.inline.fields
+          .field
+            label#field-name 密码
+          .field
+            input#password(placeholder="密码" type="password" ng-model="vm.user.password" value="{{vm.user.password}}" ng-change="vm.change_user_password(vm.user.password)")
+        .tips
       .field
-        label 重复密码
-        input#repeat-password(placeholder="重复密码" type="password" ng-model="vm.user.repeat_password" value="{{vm.user.repeat_password}}" ng-change="vm.change_user_repeat_password(vm.user.password, vm.user.repeat_password)")
+        .grouped.inline.fields
+          .field
+            label 重复密码
+          .field
+            input#repeat-password(placeholder="重复密码" type="password" ng-model="vm.user.repeat_password" value="{{vm.user.repeat_password}}" ng-change="vm.change_user_repeat_password(vm.user.password, vm.user.repeat_password)")
+        .tips
       .field
-        label 手机号
-        input#phone-number(placeholder="手机号" type="text" ng-model="vm.user.phone_number" value="{{vm.user.phone_number}}" ng-change="vm.change_user_phone_number(vm.user.phone_number)")
+        .grouped.inline.fields
+          .field
+            label#three-field-name 手机号
+          .field
+            input#phone-number(placeholder="手机号" type="text" ng-model="vm.user.phone_number" value="{{vm.user.phone_number}}" ng-change="vm.change_user_phone_number(vm.user.phone_number)")
+        .tips
       .field
-        label 邀请码
-        input#invitation-code(placeholder="邀请码" type="text")
+        .grouped.inline.fields
+          .field
+            label#three-field-name 邀请码
+          .field
+            input#invitation-code(placeholder="邀请码" type="text")
+        .tips
       .field
-        label 验证码
-        input#verification-code(placeholder="验证码" type="text")
+        .grouped.inline.fields
+          .field
+            label#three-field-name 验证码
+          .field
+            input#verification-code(placeholder="验证码" type="text")
+        .tips
       .field#button-field
         .ui.positive.reset.button#reset-button(ng-click="vm.show_student_name()") 注册
         .ui.negative.submit.button#submit-button 返回登录
