add css style of input

--- a/app/styles/register.less
+++ b/app/styles/register.less
@@ -13,12 +13,29 @@
   font-family: cursive;
 }
 
-#field-name {
+.ui.form.segment>.field {
+  margin: 0px;
+}
+
+.grouped.inline.fields.inline-fields {
+  margin: 0px;
+}
+
+.field-name {
   padding-right: 26px;
 }
 
-#three-field-name {
+.three-field-name {
   padding-right: 13px;
+}
+
+.tips {
+  height: 20px;
+  padding-left: 70px;
+}
+
+span.tip {
+  color: darkred;
 }
 
 #button-field {
