--- a/app/views/register.jade
+++ b/app/views/register.jade
@@ -71,7 +71,7 @@
             input#verification-code(placeholder="验证码" type="text")
         .tips
       .field#button-field
-        .ui.positive.reset.button#reset-button(ng-click="vm.show_student_name()") 注册
+        .ui.positive.reset.button#reset-button(ng-click="vm.submit_register_information(vm.user)") 注册
         .ui.negative.submit.button#submit-button 返回登录
       .ui.second.small.coupled.modal.transition.hidden#registermodal
         .header 注册成功
