--- a/app/styles/register.less
+++ b/app/styles/register.less
@@ -2,6 +2,10 @@
   margin: 20px;
 }
 
+i.checkmark.icon.correct-icon {
+  color: green;
+}
+
 #welcome-column{
   margin-left: 100px;
   margin-top: 100px;
