add muggles-controller and home-controller

--- a/app/views/trainer/home.jade
+++ b/app/views/trainer/home.jade
@@ -1,4 +1,25 @@
-.ui.grid#trainer-home-grid
-  .ten.wide.column#welcome-column
-    span#Welcome-message 等你好久啦！
-  .four.wide.column
+.ui.grid#home-grid
+  .one.wide.column
+  .three.wide.column#group-menu-column
+    .ui.wide.vertical.menu
+      a.active.item
+        label group1
+      a.item
+        label group2
+      a.item
+        label group3
+  .ten.wide.column
+    span
+    table.ui.table
+      thead
+        tr
+          th
+            span 姓名1
+          th
+            span 评价
+      tbody
+        tr
+          td
+            span hello
+          td
+            span 5
