add verification code

--- a/app/styles/register.less
+++ b/app/styles/register.less
@@ -42,6 +42,14 @@ span.tip {
   color: darkred;
 }
 
+#input-verification-code {
+  width: 90px;
+}
+
+#verification-code {
+  width: 70px;
+}
+
 #button-field {
   padding-left: 100px;
 }
