--- a/app/views/register.jade
+++ b/app/views/register.jade
@@ -80,18 +80,14 @@
           .field
             label.three-field-name 验证码
           .field
-            input#input-verification-code(placeholder="验证码" type="text")
+            input#input-verification-code(placeholder="验证码" type="text" value="{{vm.input_code}}" ng-model="vm.input_code" ng-change="vm.validate_verification_code(vm.input_code, vm.verification_code)")
           .field
-            input#verification-code(type="text" value="{{vm.verification_code}}" data-ng-init="vm.create_verification_code()")
+            input#verification-code(type="button" value="{{vm.verification_code}}" data-ng-init="vm.create_verification_code()")
         .tips
+          span.tip(ng-show="vm.verification_code_required_signal") {{vm.verification_code_required_tip}}
+          span.tip(ng-show="vm.verification_code_error_signal") {{vm.verification_code_error_tip}}
+          span.tip(ng-show="vm.verification_code_correct_signal")
+            i.checkmark.icon.correct-icon
       .field#button-field
         .ui.positive.reset.button#reset-button(ng-click="vm.submit_register_information(vm.user)") 注册
         .ui.negative.submit.button#submit-button 返回登录
-      .ui.second.small.coupled.modal.transition.hidden#registermodal
-        .header 注册成功
-        .content
-          .description
-            .p 系统已经向该邮箱发送了一封验证激活邮件
-              .p 请查收邮件,进行验证激活！
-        .actions
-          a.primary.ui.button.confirm 确定
