--- a/app/styles/register.less
+++ b/app/styles/register.less
@@ -51,6 +51,14 @@ span.tip {
 }
 
 #button-field {
-  padding-left: 100px;
+  padding-left: 10px;
+}
+
+#success-tip{
+  color: green;
+}
+
+#register-button {
+  margin-left: 30px;
 }
 
