--- a/app/views/register.jade
+++ b/app/views/register.jade
@@ -99,4 +99,4 @@
       .field#button-field
         span#success-tip(ng-show="vm.success_signal") 注册成功
         .ui.positive.reset.button#register-button(ng-click="vm.submit_register_information(vm.user, vm.verification_code, vm.can_regist)") 注册
-        .ui.negative.submit.button#login-button 返回登录
+        a.ui.negative.submit.button#login-button(ng-href="/") 返回登录
