rename some files

--- a/app/views/register.jade
+++ b/app/views/register.jade
@@ -98,5 +98,5 @@
             i.checkmark.icon.correct-icon
       .field#button-field
         span#success-tip(ng-show="vm.success_signal") 注册成功
-        .ui.positive.reset.button#register-button(ng-click="vm.submit_register_information(vm.user, vm.verification_code, vm.can_regist)") 注册
+        .ui.positive.reset.button#register-button(ng-click="vm.submit_register_information(vm.user, vm.verification_code)") 注册
         a.ui.negative.submit.button#login-button(ng-href="/") 返回登录
