--- a/app/views/register.jade
+++ b/app/views/register.jade
@@ -1,6 +1,5 @@
 .ui.grid#register-grid(ng-controller="registerController")
-  .ten.wide.column#welcome-column
-   span#Welcome-message 等你好久啦！
+  .ten.wide.column &nbsp;
   .four.wide.column
     .ui.form.segment
       .ui.header#register-header 欢迎注册Muggles
