--- a/app/styles/index.less
+++ b/app/styles/index.less
@@ -1,12 +1,4 @@
 body {
-  background-image: url("../../app/images/bg.jpg");
-}
-.ui.grid#logo-grid {
-  background-color: #fff;
+  background-image: url("../../app/images/bg.png");
 }
 
-img#my-logo {
-  height: 100%;
-  width: 10%;
-  margin-left: 20px;
-}
