--- a/app/views/trainer/home.jade
+++ b/app/views/trainer/home.jade
@@ -1,4 +1,4 @@
-.ui.grid#home-grid
+.ui.grid#home-grid(ng-controller="homeController")
   .one.wide.column
   .three.wide.column#group-menu-column
     .ui.wide.vertical.menu
