--- a/app/views/trainer/home.jade
+++ b/app/views/trainer/home.jade
@@ -1,4 +1,12 @@
 .ui.grid#home-grid(ng-controller="homeController")
+  .two.wide.column
+  .thirteen.wide.column
+    span Hi，
+    span#current-user #{currentUserName}
+    span 欢迎来到Muggles 考评系统
+  .one.wide.column
+    a(href="#")#logout 注销
+
   .one.wide.column
   .three.wide.column#group-menu-column
     .ui.wide.vertical.menu
