--- a/app/views/trainer/home.jade
+++ b/app/views/trainer/home.jade
@@ -2,7 +2,7 @@
   .two.wide.column
   .thirteen.wide.column
     span Hi，
-    span#current-user #{currentUserName}
+    span#current-user {{vm.userName}}
     span 欢迎来到Muggles 考评系统
   .one.wide.column
     a(href="#")#logout 注销
