--- a/app/views/appraise.jade
+++ b/app/views/appraise.jade
@@ -10,20 +10,107 @@
       .step
         .content
           .title 考评类型
-      .step.active
+      .step(ng-class="{true: 'active', false: 'completed'} [vm.day_appraises_signal]")
         .content
           .title 日考评
-      .step
+      .step(ng-class="{true: 'active', false: 'completed'} [vm.week_appraises_signal]")
         .content
           .title 周考评
-      .step
+      .step(ng-class="{true: 'active', false: 'completed'} [vm.month_appraises_signal]")
         .content
           .title 月考评
-      .step
+      .step(ng-class="{true: 'active', false: 'completed'} [vm.season_appraises_signal]")
         .content
           .title 季考评
   .ten.wide.column
-    table.ui.table
+    table.ui.table(ng-show="vm.day_appraises_signal")
+      thead
+        tr
+          th
+            span {{vm.trainee_name}}
+          th
+            span 考评等级
+          th
+            span 考评理由
+          th
+            span 考评人
+          th
+            span 组别
+          th
+            span 评价日期
+      tbody
+        tr(ng-repeat="appraise in vm.appraises")
+          td
+            span &nbsp;
+          td
+            span {{appraise.level}}
+          td
+            span {{appraise.comment}}
+          td
+            span {{appraise.appraiser.username}}
+          td
+            span {{appraise.group.name}}
+          td
+            span {{appraise.appraised_date}}
+    table.ui.table(ng-show="vm.week_appraises_signal")
+      thead
+        tr
+          th
+            span {{vm.trainee_name}}
+          th
+            span 考评等级
+          th
+            span 考评理由
+          th
+            span 考评人
+          th
+            span 组别
+          th
+            span 评价日期
+      tbody
+        tr(ng-repeat="appraise in vm.appraises")
+          td
+            span &nbsp;
+          td
+            span {{appraise.level}}
+          td
+            span {{appraise.comment}}
+          td
+            span {{appraise.appraiser.username}}
+          td
+            span {{appraise.group.name}}
+          td
+            span {{appraise.appraised_date}}
+    table.ui.table(ng-show="vm.month_appraises_signal")
+      thead
+        tr
+          th
+            span {{vm.trainee_name}}
+          th
+            span 考评等级
+          th
+            span 考评理由
+          th
+            span 考评人
+          th
+            span 组别
+          th
+            span 评价日期
+      tbody
+        tr(ng-repeat="appraise in vm.appraises")
+          td
+            span &nbsp;
+          td
+            span {{appraise.level}}
+          td
+            span {{appraise.comment}}
+          td
+            span {{appraise.appraiser.username}}
+          td
+            span {{appraise.group.name}}
+          td
+            span {{appraise.appraised_date}}
+    table.ui.table(ng-show="vm.season_appraises_signal")
       thead
         tr
           th
